--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 metrics-dump.zip filter=lfs diff=lfs merge=lfs -text
+0-50/partitioned.zip filter=lfs diff=lfs merge=lfs -text
+50-99/partitioned.zip filter=lfs diff=lfs merge=lfs -text
+100/partitioned.zip filter=lfs diff=lfs merge=lfs -text
